// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Play View renders regular 1`] = `
<section
  class="container"
>
  <h1
    class="title has-text-centered"
  >
    
    Play
  
  </h1>
   
  <section
    class="game-area"
  >
    <game-word-display-stub />
     
    <button
      class="button is-primary is-large is-fullwidth"
    >
      
      New Game
    
    </button>
     
    <section
      style="display: none;"
    >
      <div>
        <button
          class="button is-info is-large is-letter-button"
        >
          
          a
        
        </button>
        <button
          class="button is-info is-large is-letter-button"
        >
          
          b
        
        </button>
        <button
          class="button is-info is-large is-letter-button"
        >
          
          c
        
        </button>
        <button
          class="button is-info is-large is-letter-button"
        >
          
          d
        
        </button>
        <button
          class="button is-info is-large is-letter-button"
        >
          
          e
        
        </button>
        <button
          class="button is-info is-large is-letter-button"
        >
          
          f
        
        </button>
        <button
          class="button is-info is-large is-letter-button"
        >
          
          g
        
        </button>
        <button
          class="button is-info is-large is-letter-button"
        >
          
          h
        
        </button>
        <button
          class="button is-info is-large is-letter-button"
        >
          
          i
        
        </button>
        <button
          class="button is-info is-large is-letter-button"
        >
          
          j
        
        </button>
        <button
          class="button is-info is-large is-letter-button"
        >
          
          k
        
        </button>
        <button
          class="button is-info is-large is-letter-button"
        >
          
          l
        
        </button>
        <button
          class="button is-info is-large is-letter-button"
        >
          
          m
        
        </button>
        <button
          class="button is-info is-large is-letter-button"
        >
          
          n
        
        </button>
        <button
          class="button is-info is-large is-letter-button"
        >
          
          o
        
        </button>
        <button
          class="button is-info is-large is-letter-button"
        >
          
          p
        
        </button>
        <button
          class="button is-info is-large is-letter-button"
        >
          
          q
        
        </button>
        <button
          class="button is-info is-large is-letter-button"
        >
          
          r
        
        </button>
        <button
          class="button is-info is-large is-letter-button"
        >
          
          s
        
        </button>
        <button
          class="button is-info is-large is-letter-button"
        >
          
          t
        
        </button>
        <button
          class="button is-info is-large is-letter-button"
        >
          
          u
        
        </button>
        <button
          class="button is-info is-large is-letter-button"
        >
          
          v
        
        </button>
        <button
          class="button is-info is-large is-letter-button"
        >
          
          w
        
        </button>
        <button
          class="button is-info is-large is-letter-button"
        >
          
          x
        
        </button>
        <button
          class="button is-info is-large is-letter-button"
        >
          
          y
        
        </button>
        <button
          class="button is-info is-large is-letter-button"
        >
          
          z
        
        </button>
      </div>
    </section>
  </section>
</section>
`;

exports[`Play View renders with game 1`] = `
<section
  class="container"
>
  <h1
    class="title has-text-centered"
  >
    
    Play
  
  </h1>
   
  <section
    class="game-area"
  >
    <game-word-display-stub />
     
    <button
      class="button is-primary is-large is-fullwidth"
      style="display: none;"
    >
      
      New Game
    
    </button>
     
    <section
      style=""
    >
      <div>
        <button
          class="button is-info is-large is-letter-button"
        >
          
          a
        
        </button>
        <button
          class="button is-info is-large is-letter-button"
          disabled="disabled"
        >
          
          b
        
        </button>
        <button
          class="button is-info is-large is-letter-button"
        >
          
          c
        
        </button>
        <button
          class="button is-info is-large is-letter-button"
        >
          
          d
        
        </button>
        <button
          class="button is-info is-large is-letter-button"
        >
          
          e
        
        </button>
        <button
          class="button is-info is-large is-letter-button"
        >
          
          f
        
        </button>
        <button
          class="button is-info is-large is-letter-button"
        >
          
          g
        
        </button>
        <button
          class="button is-info is-large is-letter-button"
        >
          
          h
        
        </button>
        <button
          class="button is-info is-large is-letter-button"
        >
          
          i
        
        </button>
        <button
          class="button is-info is-large is-letter-button"
        >
          
          j
        
        </button>
        <button
          class="button is-info is-large is-letter-button"
        >
          
          k
        
        </button>
        <button
          class="button is-info is-large is-letter-button"
        >
          
          l
        
        </button>
        <button
          class="button is-info is-large is-letter-button"
        >
          
          m
        
        </button>
        <button
          class="button is-info is-large is-letter-button"
        >
          
          n
        
        </button>
        <button
          class="button is-info is-large is-letter-button"
          disabled="disabled"
        >
          
          o
        
        </button>
        <button
          class="button is-info is-large is-letter-button"
        >
          
          p
        
        </button>
        <button
          class="button is-info is-large is-letter-button"
        >
          
          q
        
        </button>
        <button
          class="button is-info is-large is-letter-button"
          disabled="disabled"
        >
          
          r
        
        </button>
        <button
          class="button is-info is-large is-letter-button"
        >
          
          s
        
        </button>
        <button
          class="button is-info is-large is-letter-button"
        >
          
          t
        
        </button>
        <button
          class="button is-info is-large is-letter-button"
        >
          
          u
        
        </button>
        <button
          class="button is-info is-large is-letter-button"
        >
          
          v
        
        </button>
        <button
          class="button is-info is-large is-letter-button"
        >
          
          w
        
        </button>
        <button
          class="button is-info is-large is-letter-button"
        >
          
          x
        
        </button>
        <button
          class="button is-info is-large is-letter-button"
        >
          
          y
        
        </button>
        <button
          class="button is-info is-large is-letter-button"
        >
          
          z
        
        </button>
      </div>
    </section>
  </section>
</section>
`;
